# i-will-eventually-win-against-obscure-grpc-stuff

./: .pre-commit-config.yaml  MODULE.bazel  go.mod
.github/: renovate.json
.github/workflows/: ci.yaml
proto/: BUILD.bazel
proto/proto/: BUILD.bazel  action_cache.proto  build_event_stream.proto  command_line.proto  failure_details.proto  invocation_policy.proto  option_filters.proto  package_load_metrics.proto
