module(
    name = "i-will-eventually-win-against-obscure-grpc-stuff",
    version = "0.0.1",
)

bazel_dep(name = "aspect_bazel_lib", version = "2.21.2")
bazel_dep(name = "bazel_skylib", version = "1.8.2")
bazel_dep(name = "gazelle", version = "0.45.0")
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.0", repo_name = "com_google_protobuf")
#bazel_dep(name = "protobuf", version = "33.0")
bazel_dep(name = "rules_go", version = "0.58.2")
bazel_dep(name = "rules_proto_grpc", version = "5.8.0")
bazel_dep(name = "rules_proto_grpc_go", version = "5.8.0")

bazel_dep(name = "buildifier_prebuilt", version = "8.2.0.2", dev_dependency = True)
bazel_dep(name = "rules_bazel_integration_test", version = "0.33.2", dev_dependency = True)

go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")
