load("@rules_proto_grpc_go//:defs.bzl", "go_grpc_library")

go_grpc_library(
    name = "bep",
    importpath = "github.com/chickenandpork/i-will-eventually-win-against-obscure-grpc-stuff",
    protos = [
        "//proto/proto:action_cache_proto",
        "//proto/proto:build_event_stream_proto",
        "//proto/proto:command_line_proto",
        "//proto/proto:failure_details_proto",
        "//proto/proto:invocation_policy_proto",
        "//proto/proto:option_filters_proto",
        "//proto/proto:package_load_metrics_proto",
    ],
)
